new ref link added

--- a/Logistic_Regression_Demo.ipynb
+++ b/Logistic_Regression_Demo.ipynb
@@ -16,12 +16,13 @@
     "\n",
     "The central premise of Logistic Regression is the assumption that your input space can be separated into two nice ‘regions’, one for each class, by a straight boundary. If we fit best found regression line, it still won’t be enough to decide any point by which we can differentiate classes, especially in presence of outlier data. It will put some positive class examples into negative class.\n",
     "\n",
-    "### References\n",
+    "### Further Reads\n",
     "\n",
     "1. https://towardsdatascience.com/logistic-regression-detailed-overview-46c4da4303bc\n",
     "2. https://en.wikipedia.org/wiki/Logistic_regression\n",
     "3. https://towardsdatascience.com/understanding-logistic-regression-9b02c2aec102\n",
-    "4. https://codesachin.wordpress.com/2015/08/16/logistic-regression-for-dummies/"
+    "4. https://codesachin.wordpress.com/2015/08/16/logistic-regression-for-dummies/\n",
+    "5. https://towardsdatascience.com/breaking-it-down-logistic-regression-e5c3f1450bd"
    ]
   },
   {
@@ -42,7 +43,10 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
    },
    "outputs": [],
    "source": [
@@ -588,7 +592,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -602,9 +606,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
